// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/components/Header AdminRole smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "UNIVERSITY_OF_HELSINKI OPEN_IN_NEW_TAB",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "admin",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "logout",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "language",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "​",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "haspopup": "listbox",
      "name": "language Suomeksi",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "level": 1,
      "name": "ORGANISATIONAL_REGISTRY",
      "pressed": undefined,
      "role": "heading",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "ORGANISATION",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "TEXTS",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "HIERARCHY_FILTERS",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
  ],
  "name": "stories-components-header--admin-role",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`stories/components/Header ReaderRole smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "UNIVERSITY_OF_HELSINKI OPEN_IN_NEW_TAB",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "user",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "logout",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "language",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "​",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "haspopup": "listbox",
      "name": "language Suomeksi",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "level": 1,
      "name": "ORGANISATIONAL_REGISTRY",
      "pressed": undefined,
      "role": "heading",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "ORGANISATION",
      "pressed": undefined,
      "role": "link",
      "value": undefined,
    },
  ],
  "name": "stories-components-header--reader-role",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;
